--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,23 @@
 	<build>
 		<plugins>
 			<plugin>
+     ...
+    <configuration>
+        <cloudHubDeployment>
+            <uri>https://anypoint.mulesoft.com</uri>
+            <muleVersion>${mule.version}</muleVersion>
+            <username>vijay_sangam</username>
+            <password>Sangam@123</password>
+            <applicationName>${cloudhub.application.name}</applicationName>
+            <environment>SANDBOX</environment>
+            <properties>
+                <key>value</key>
+            </properties>
+        </cloudHubDeployment>
+    </configuration>
+
+</plugin>
+			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
