--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
 		<app.runtime>4.1.3</app.runtime>
 		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
 	</properties>
+	
+	<distributionManagement>
+        <!-- use the following if you're not using a snapshot version. -->
+         <repository>
+            <uniqueVersion>false</uniqueVersion>
+          <id>mycloudhub</id>
+          <name>Cloud Hub</name>
+          <url>https://anypoint.mulesoft.com/cloudhub/</url>
+          <layout>default</layout>
+        </repository>
+      </distributionManagement>
+		
 
 	<build>
 		<plugins>
