--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 				<configuration>
 				    <cloudHubDeployment>
                                          <uri>https://anypoint.mulesoft.com</uri>
-                                         <muleVersion>${mule.version}</muleVersion>
+                                         <muleVersion>2.0uleVersion>
                                          <username>vijay_sangam</username>
                                          <password>Sangam@123</password>
                                          <applicationName>${cloudhub.application.name}</applicationName>
