--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 
 		<app.runtime>4.1.3</app.runtime>
 		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
-	</properties>
+    </properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -26,16 +27,16 @@
 				<extensions>true</extensions>
 				<configuration>
 				    <cloudHubDeployment>
-                                         <uri>https://anypoint.mulesoft.com</uri>
-                                         <muleVersion>${mule.version}<muleVersion>
-                                         <username>vijay_sangam</username>
-                                         <password>Sangam@123</password>
-                                         <applicationName>${cloudhub.application.name}</applicationName>
-                                         <environment>SANDBOX</environment>
-                                         <properties>
-                                         <key>value</key>
-                                       </properties>
-                                     </cloudHubDeployment>
+            				<uri>https://anypoint.mulesoft.com</uri>
+            				<muleVersion>${mule.version}</muleVersion>
+            				<username>vijay_sangam</username>
+            				<password>Sangam@123</password>
+            				<applicationName>${cloudhub.application.name}</applicationName>
+            				<environment>SANDBOX</environment>
+            				<properties>
+                			    <key>value</key>
+            				</properties>
+        			   </cloudHubDeployment>	
 				</configuration>
 			</plugin>
 		</plugins>
@@ -56,6 +57,16 @@
         </dependency>
 	</dependencies>
 
+	<distributionManagement>
+        <!-- use the following if you're not using a snapshot version. -->
+         <repository>
+            <uniqueVersion>false</uniqueVersion>
+           <id>mycloudhub</id>
+           <name>Cloud Hub</name>
+           <url>https://anypoint.mulesoft.com/cloudhub/</url>
+           <layout>default</layout>
+         </repository>
+        </distributionManagement>	
 	<repositories>
           <repository>
             <id>anypoint-exchange</id>
