--- a/pom.xml
+++ b/pom.xml
@@ -20,25 +20,27 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.mule.tools.maven</groupId>
-				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-				    <cloudHubDeployment>
-            				<uri>https://anypoint.mulesoft.com/cloudhub/</uri>
-            				<muleVersion>${mule.version}</muleVersion>
-            				<username>vijay_sangam</username>
-            				<password>Sangam@123</password>
-            				<applicationName>${cloudhub.application.name}</applicationName>
-            				<environment>SANDBOX</environment>
-            				<properties>
-                			    <key>value</key>
-            				</properties>
-        			   </cloudHubDeployment>	
-				</configuration>
-			</plugin>
+			<plugin> 
+		    	<groupId>org.mule.tools.maven</groupId> 
+		    	<artifactId>mule-maven-plugin</artifactId> 
+		    	<version>2.0</version>
+		    	<configuration>
+		    	<deploymentType>cloudhub</deploymentType> 
+		    	<muleVersion>4.1.4</muleVersion>
+		    	<username>vijay_reddy</username> 
+		    	<password>Sangam@123</password>
+		    	<workerType>Micro</workerType> 
+		    	<redeploy>true</redeploy> 
+		    	<environment>Sandbox</environment>
+		    	</configuration> 
+		    	<executions>
+		    		<execution>
+		     			<goals> 
+		        			<goal>deploy</goal>
+		      			</goals> 
+		     		</execution>
+		    	</executions> 
+		   	</plugin>
 		</plugins>
 	</build>
 
