--- a/pom.xml
+++ b/pom.xml
@@ -16,31 +16,18 @@
 
 		<app.runtime>4.1.3</app.runtime>
 		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
-    </properties>
+	</properties>
 
 	<build>
 		<plugins>
-			<plugin> 
-		    	<groupId>org.mule.tools.maven</groupId> 
-		    	<artifactId>mule-maven-plugin</artifactId> 
-		    	<version>2.0</version>
-		    	<configuration>
-		    	<deploymentType>cloudhub</deploymentType> 
-		    	<muleVersion>4.1.4</muleVersion>
-		    	<username>vijay_sangam</username> 
-		    	<password>Sangam@123</password>
-		    	<workerType>Micro</workerType> 
-		    	<redeploy>true</redeploy> 
-		    	<environment>SANDBOX</environment>
-		    	</configuration> 
-		    	<executions>
-		    		<execution>
-		     			<goals> 
-		        			<goal>deploy</goal>
-		      			</goals> 
-		     		</execution>
-		    	</executions> 
-		   	</plugin>
+			<plugin>
+				<groupId>org.mule.tools.maven</groupId>
+				<artifactId>mule-maven-plugin</artifactId>
+				<version>${mule.maven.plugin.version}</version>
+				<extensions>true</extensions>
+				<configuration>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -59,16 +46,6 @@
         </dependency>
 	</dependencies>
 
-	<distributionManagement>
-        <!-- use the following if you're not using a snapshot version. -->
-         <repository>
-            <uniqueVersion>false</uniqueVersion>
-           <id>mycloudhub</id>
-           <name>Cloud Hub</name>
-           <url>https://anypoint.mulesoft.com/cloudhub/</url>
-           <layout>default</layout>
-         </repository>
-        </distributionManagement>	
 	<repositories>
           <repository>
             <id>anypoint-exchange</id>
