--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<app.runtime>4.1.3</app.runtime>
+		<app.runtime>4.1.4</app.runtime>
 		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
 	</properties>
 
@@ -25,27 +25,17 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
-		    	<configuration>
-                            <cloudHubDeployment>
-                                 <uri>https://anypoint.mulesoft.com</uri>
-                                 <muleVersion>4.1.3</muleVersion>
-                                 <username>vijay_sangam</username>
-                                 <password>Sangam@123</password>
-                                 <applicationName>${cloudhub.application.name}</applicationName>
-                                 <environment>SANDBOX</environment>
-                                    <properties>
-                                         <key>value</key>
-                                    </properties>
-                            </cloudHubDeployment>
-		    	</configuration> 
-		    	   <executions>
-		    		<execution>
-		     			<goals> 
-		        			<goal>deploy</goal>
-		      			</goals> 
-		     		</execution>
-		    	</executions> 
-		   	</plugin>
+				<configuration>
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com</uri>
+						<muleVersion>4.1.4</muleVersion>
+						<username>vijay_sangam</username>
+						<password>Sangam@123</password>
+						<applicationName>HelloWorld-demo</applicationName>
+						<environment>Sandbox</environment>
+					</cloudHubDeployment>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -53,28 +43,17 @@
         <dependency>
             <groupId>org.mule.connectors</groupId>
             <artifactId>mule-http-connector</artifactId>
-            <version>1.3.1</version>
+            <version>1.3.2</version>
             <classifier>mule-plugin</classifier>
         </dependency>
         <dependency>
             <groupId>org.mule.connectors</groupId>
             <artifactId>mule-sockets-connector</artifactId>
-            <version>1.1.1</version>
+            <version>1.1.2</version>
             <classifier>mule-plugin</classifier>
         </dependency>
 	</dependencies>
-	
-         <distributionManagement>
-        <!-- use the following if you're not using a snapshot version. -->
-         <repository>
-            <uniqueVersion>false</uniqueVersion>
-           <id>mycloudhub</id>
-           <name>Cloud Hub</name>
-           <url>https://anypoint.mulesoft.com/cloudhub/</url>
-           <layout>default</layout>
-         </repository>
-        </distributionManagement>
-	
+
 	<repositories>
           <repository>
             <id>anypoint-exchange</id>
@@ -82,7 +61,6 @@
             <url>https://maven.anypoint.mulesoft.com/api/v1/maven</url>
             <layout>default</layout>
         </repository>
-		
         <repository>
             <id>mulesoft-releases</id>
             <name>MuleSoft Releases Repository</name>
@@ -103,3 +81,4 @@
     </pluginRepositories>
 
 </project>
+
